Fix radio buttons showing up on Firefox

--- a/public/event.less
+++ b/public/event.less
@@ -235,6 +235,7 @@
       margin: 0;
       float: right;
       margin-left: 15px;
+      margin-top: 2px;
     }
 
     input:checked ~ i.fa {
@@ -242,7 +243,7 @@
     }
 
     input {
-      width: 0;
+      display: none;
     }
   }
 
